# assemblyline-service-template

./: README.md  cookiecutter.json  pyproject.toml  requirements.dev.txt  requirements.txt
local_extensions/: github_maintainer.py
templates/: bsd3.txt  mit.txt
{{ cookiecutter.__repository }}/: CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  service_manifest.yml
{{ cookiecutter.__repository }}/.devcontainer/: devcontainer.json
{{ cookiecutter.__repository }}/.github/: CODEOWNERS
{{ cookiecutter.__repository }}/.github/workflows/: cruft-update.yml  immortal-workflows.yml
{{ cookiecutter.__repository }}/tests/: gentests.sh  pytest.sh  test_{{ cookiecutter.__pkg_name }}.py  test_{{ cookiecutter.__pkg_name }}_samples.py
{{ cookiecutter.__repository }}/{{ cookiecutter.__pkg_name }}/: {{ cookiecutter.__pkg_name }}.py
