[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "assembyline_service_template"
version = "0.0.1"
authors = [
    { name = "CCCS Assemblyline development team", email = "assemblyline@cyber.gc.ca" },
]
description = "Cookiecutter template for Assemblyline services"
requires-python = ">=3.11"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["readme", "dependencies", "optional-dependencies"]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }
optional-dependencies.dev = { file = ["requirements.dev.txt"] }


[tool.ruff]
line-length = 119
indent-width = 4
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
